jan - added TODOs and overflow temporary fix

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ body {
     border-radius: 6px;
     padding: 10px;
     min-width: 120px;
+    margin: 10px 20px 0 0 ;
     background: #fafafa;
     float: left;
 }
@@ -230,6 +231,7 @@ td {
     padding: 20px;
     margin-bottom: 30px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+    overflow: auto;
 }
 
 #data .plot-container {
